--- a/views/index.pug
+++ b/views/index.pug
@@ -7,7 +7,8 @@ block content
   <br>
   <br>
   div(id="target") Display
-  a(href = '/fan') Monkey Page link
+  <br>
+  a(href = '/shoes') Shoes Page link
   |
   script. 
     let client_count = 0;
